--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rob Bingo</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="image.jpg">
 </head>
 <body>
   <div id="app">
