Update index.html with test of elevenlabs thingy

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <button id="reset-btn">Reset Board</button>
       <button id="suggest-btn">Submit Suggestion</button>
     </div>
+    <elevenlabs-convai agent-id="agent_01jzqfwwa0f8wr1h77ws0t8c8c"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
   </div>
   
   <!-- Suggestion Modal -->
