--- a/index.html
+++ b/index.html
@@ -13,30 +13,17 @@
     <div class="header">
       <img src="image.jpg" alt="Rob's Image" class="header-image">
       <div class="title-wrapper">
-        <h1>Rob Bingo</h1>
+        <h1>Call Bingo</h1>
       </div>
     </div>
     
-    <p class="instructions">Mark off Rob's phrases and actions as they happen. Get 5 in a row to win!</p>
+    <p class="instructions">Mark off what happens on your calls as they happen. Get 5 in a row to win!</p>
     <div class="bingo-board" id="bingo-board"></div>
     <div class="buttons">
       <button id="reset-btn">Reset Board</button>
-      <button id="suggest-btn">Submit Suggestion</button>
     </div>
     </div>
   
-  <!-- Suggestion Modal -->
-  <div class="modal hidden" id="suggest-modal">
-    <div class="modal-content">
-      <h2>Submit a Suggestion</h2>
-      <p>Have an idea for Rob's Bingo? Let us know!</p>
-      <textarea id="suggest-input" placeholder="Enter your suggestion here..."></textarea>
-      <div class="modal-buttons">
-        <button id="send-suggestion">Send</button>
-        <button id="close-suggest-modal">Close</button>
-      </div>
-    </div>
-  </div>
   <!-- Winning Modal -->
   <div class="modal hidden" id="win-modal">
     <div class="modal-content">
