removed reference to Rob from winning modal

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="modal-content">
       <img src="image.jpg" alt="Winning Image" class="modal-image">
       <h2>🎉 Bingo! You Win! 🎉</h2>
-      <p>Great job keeping up with Rob!</p>
+      <p>Great job</p>
       <button id="close-modal">Close</button>
     </div>
   </div>
