added rule clarification

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     
-    <p class="instructions">Mark off what happens on your calls as they happen. Get 5 in a row to win!</p>
+    <p class="instructions">Mark off what happens on your calls as they happen. Get them all to win!</p>
     <div class="bingo-board" id="bingo-board"></div>
     <div class="buttons">
       <button id="reset-btn">Reset Board</button>
